<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hangman"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project1.csc214.playgames.Hangman">
    <FrameLayout
        android:id="@+id/scoreBoard_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            class="project1.csc214.playgames.Scoreboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_scoreboard"/>
    </FrameLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@+id/scoreBoard_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player1scorehm"
        android:text="@string/_0"
        android:textSize="25sp" />

    <TextView
        android:layout_below="@+id/scoreBoard_fragment"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/player2scorehm"
        android:text="@string/_0"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/word"
        android:textSize="40sp"
        android:text="@string/wordtoguess"
        android:typeface="monospace"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_a_letter"
        android:id="@+id/guessletter"
        android:layout_centerInParent="true"
        android:layout_below="@+id/word"/>

    <TextView
        android:id="@+id/hmguess2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/_8"/>
    <TextView
        android:id="@+id/hmguess1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/_8"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/guessletter">
        <Button
            android:id="@+id/okforHM"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
        <Button
            android:id="@+id/quitforHM"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quit"/>
    </LinearLayout>
</RelativeLayout>
