<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project1.csc214.playgames.MainActivity">
        <FrameLayout
            android:id="@+id/scoreBoard_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout="@layout/fragment_scoreboard"
                    class="project1.csc214.playgames.Scoreboard"/>
        </FrameLayout>


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/scoreBoard_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1scoremain"
                    android:text="@string/_0"
                    android:textSize="25sp" />

                <TextView
                    android:layout_below="@+id/scoreBoard_fragment"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_alignParentEnd="true"
                    android:id="@+id/player2scoremain"
                    android:text="@string/_0"
                    android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
           android:layout_above="@+id/Bhotcold"
            android:textSize="20sp"
            android:id="@+id/text"
            android:text="@string/please_choose_a_game"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bhotcold"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:text="@string/hottor_or_colder"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bhangman"
            android:layout_margin="5dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/Bhotcold"
            android:layout_weight="1"
            android:text="@string/hangman"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/Bhangman"
            android:id="@+id/Bconnect4"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/connect4"/>




</RelativeLayout>
